Changelog
=========

2.0a1 - Unreleased
------------------

* Add possibility to calculate site-specific boost values via a skin script.
  [hannosch, witsch]

* Fix wildcard searches for patterns other than just ending with an asterisk.
  [hannosch, witsch]

* Require Plone 4.x, declare package dependencies & remove BBB bits.
  [hannosch, witsch]

* Add configurable setting for custom search pattern for simple searches,
  allowing to include multiple fields with specific boost values.
  [hannosch, witsch]

* Don't modify search parameters during indexing.
  [hannosch, witsch]

* Fixed auto-commit support to actually sent the data to Solr, but omit the
  commit message.
  [hannosch]

* Added support for ``commitWithin`` support on add messages as per SOLR-793.
  This feature requires a Solr 1.4 server.
  [hannosch]

* Split out 404 auto-suggestion tests into a separate file and disabled them
  under Plone 4 - the feature is no longer part of Plone.
  [hannosch]

* Fixed error handling code to deal with different exception string
  representations in Python 2.6.
  [hannosch]

* Made tests independent of the ``Large Folder`` content type, as it no longer
  exists in Plone 4.
  [hannosch]

* Avoid using the incompatible TestRequest from zope.publisher inside Zope 2.
  [hannosch]

* Fixed undefined variables in ``search.pt`` for Plone 4 compatibility.
  [hannosch]


1.0 - Released September 14, 2010
---------------------------------

* Enable multi-field "fq" statements.
  [tesdal, witsch]

* Prevent logging of "unknown" search attributes for `use_solr` and the
  infamous `-C` Zope startup parameter.
  [witsch]


1.0rc3 - Released September 9, 2010
-----------------------------------

* Add logging of queries without explicit "rows" parameter.
  [witsch]

* Add configuration to exclude user from ``allowedRolesAndUsers`` for
  better cacheability.
  [tesdal, witsch]

* Add configuration for effective date steps.
  [tesdal, witsch]
